# ros_robot_control_gui

./: robot_control_gui.py
ros_robot_control_gui/: CMakeLists.txt  README.md  package.xml  setup_dependencies.sh
ros_robot_control_gui/config/: robot_config.yaml
ros_robot_control_gui/launch/: robot_control.launch.py
ros_robot_control_gui/scripts/: robot_control_gui.py
